<resources>
    <string name="app_name">CareerCompass</string>

    <string name="skip">Skip</string>
    <string name="onBoardTitleOne">Welcome to Your\nCareer Hub</string>
    <string name="onBoardDescriptionOne">Explore careers, find jobs, invest in small businesses, and develop new skills—all in one app designed just for you.</string>
    <string name="onBoardTitleTwo">Your Personal\nGrowth Companion</string>
    <string name="onBoardDescriptionTwo">Discover your path, find jobs, explore small business insights, and learn new skills with our AI-powered app.</string>
    <string name="onBoardTitleThree">Empower\nYour Future</string>
    <string name="onBoardDescriptionThree">Uncover strengths, search jobs, dive into small business insights, and boost skills. Your roadmap to success begins now.</string>
    <string name="hello">Hello</string>
    <string name="sing_in_to_your_account">Sing in to your account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sing_in">Sing in</string>
    <string name="don_t_have_an_account_create">Don\'t have an account? <u>Create</u></string>
    <string name="create_account">Create account</string>
    <string name="username">UserName</string>
    <string name="phone">Phone</string>
    <string name="or_create_account_using_social_media">Or create account using social media</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="forgot_slogan">We will send you an email with instructions\non how to reset your password.</string>
    <string name="reset_your_password_here">Reset your password here</string>
    <string name="forgot">Forgot</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="complete">Complete</string>
    <string name="complete_profile_slogan">Unleash Opportunities\nYour Profile Holds the Key!</string>
    <string name="field_of_study">Field of Study</string>
    <string name="level">Level</string>
    <string name="institution">Institution</string>
    <string name="cgpa">CGPA</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="business">Business</string>
    <string name="career">Career</string>
    <string name="notification">Notification</string>
    <string name="welcome_to_ncareercompass">Welcome to\nCareerCompass</string>
    <string name="banner_one">50% off\ntake any course</string>
    <string name="join_now">Join Now</string>
    <string name="find_your_path">Find your path</string>
    <string name="android_developer">Android Developer</string>
    <string name="_50_5k">50.5k</string>
    <string name="_62_8k">62.8k</string>
    <string name="_42_6k">42.6k</string>
    <string name="ios_developer">IOS Developer</string>
    <string name="web_developer">Web Developer</string>
    <string name="top_business_ideas">Top Business Ideas</string>
    <string name="b1">Invest in Real Estate</string>
    <string name="start_a_dropshipping_business">Start a Dropshipping Business</string>
    <string name="become_a_virtual_assistant">Become a Virtual Assistant</string>
    <string name="become_a_freelance_writer">Become a Freelance Writer</string>
    <string name="b3">Start a Custom Cake Design Business</string>
    <string name="b2">Start a Print on Demand Business</string>
    <string name="txt_login_bottom">Don\'t have an account? Register Now</string>
    <string name="login_message">Welcome back!\nGlad to see you, Again!</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="or_login">Or Login with</string>
    <string name="register_message">Hello!\nRegister to get started</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_phone">Enter your phone</string>
    <string name="or_register">Or Register with</string>
    <string name="txt_register_bottom">Already have an account? Login Now</string>
    <string name="msg_forgot_password">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="btn_send_code">Send Code</string>
    <string name="complete_profile_message">Connect better,\ncomplete your profile</string>
    <string name="hint_select_degree">Select your degree</string>
    <string name="enter_your_subject">Enter your subject</string>
    <string name="hint_passing_year">Enter your passing year</string>
    <string name="hint_cgpa">Enter your CGPA</string>
    <string name="hint_institute">Enter your institute</string>
    <string name="hint_favorite_subjects">Select your favorite subjects</string>
    <string name="max_subjects">Max 3 subjects</string>
    <string name="hint_bio">Enter your bio</string>
    <string name="btn_complete">Complete</string>
    <string name="become_a_photographer_or_event_planner">Become a Photographer or Event Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_message">Keep up to date\nwith your notifications</string>
    <string name="temp_notification">Your favorite business has a new update. Discover more.</string>
    <string name="message_profile">Let\'s get to\nknow you better</string>
    <string name="basics">Basics</string>
    <string name="education">Education</string>
    <string name="logout">Logout</string>
    <string name="type_message">Type your message here ...</string>
    <string name="temp_message_one">Hello World! Welcome to the world of Android Development</string>
</resources>