<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context=".ui.auth.fragments.complete_profile.CompleteProfileFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_profile"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <AutoCompleteTextView
        android:id="@+id/etLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_between_views"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="name"
        android:background="@drawable/bg_et_auth"
        android:elevation="3dp"
        android:hint="@string/level"
        android:drawableEnd="@drawable/ic_drop_down"
        android:inputType="none"
        android:shadowColor="@color/shadowColor"
        app:layout_constraintEnd_toStartOf="@+id/etField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <AutoCompleteTextView
        android:id="@+id/etField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/space_between_views"
        android:autofillHints="name"
        android:background="@drawable/bg_et_auth"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/field_of_study"
        android:inputType="none"
        android:drawableEnd="@drawable/ic_drop_down"
        android:shadowColor="@color/shadowColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etLevel"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/etInstitution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_between_views"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/space_between_views"
        android:background="@drawable/bg_et_auth"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/institution"
        android:inputType="textPersonName"
        android:shadowColor="@color/shadowColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLevel"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etGraduationYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_between_views"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="name"
        android:background="@drawable/bg_et_auth"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/graduation_year"
        android:inputType="number"
        android:maxLength="4"
        android:shadowColor="@color/shadowColor"
        app:layout_constraintEnd_toStartOf="@+id/etCGPA"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInstitution" />

    <EditText
        android:id="@+id/etCGPA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/space_between_views"
        android:background="@drawable/bg_et_auth"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/cgpa"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:shadowColor="@color/shadowColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etGraduationYear"
        app:layout_constraintTop_toBottomOf="@+id/etInstitution"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_between_views"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/space_between_views"
        android:background="@drawable/bg_et_auth"
        android:elevation="3dp"
        android:ems="10"
        android:maxLength="20"
        android:hint="@string/about"
        android:inputType="textPassword"
        android:shadowColor="@color/shadowColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCGPA"
        tools:ignore="Autofill" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/btn_auth_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAbout"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnNext"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toTopOf="@+id/btnNext" />

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/complete_profile_slogan"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        app:layout_constraintVertical_bias="0.426" />

</androidx.constraintlayout.widget.ConstraintLayout>